--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "learning-node",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node path/index.js"
+    "start": "node npm/index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/ndjerrou/learning-node/issues"
   },
-  "homepage": "https://github.com/ndjerrou/learning-node#readme"
+  "homepage": "https://github.com/ndjerrou/learning-node#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "chalk": "^5.0.1"
+  }
 }
