--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "learning-node",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node npm/index.js"
+    "dev": "nodemon express/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,8 +17,11 @@
     "url": "https://github.com/ndjerrou/learning-node/issues"
   },
   "homepage": "https://github.com/ndjerrou/learning-node#readme",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.17.3"
+  },
   "devDependencies": {
-    "chalk": "^5.0.1"
+    "chalk": "^5.0.1",
+    "nodemon": "^2.0.15"
   }
 }
