set start shell command for heroku

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node express/index.js",
     "dev": "nodemon express/index.js"
   },
   "repository": {
